// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index createDefaultModel default-snapshot 1`] = `
Object {
  "partA": Object {
    "choiceMode": "radio",
    "choicePrefix": "letters",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": false,
    "gridColumns": 2,
    "prompt": "",
    "promptEnabled": true,
    "rationale": "",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "",
    "teacherInstructionsEnabled": true,
    "toolbarEditorPosition": "bottom",
  },
  "partB": Object {
    "choiceMode": "radio",
    "choicePrefix": "letters",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": false,
    "gridColumns": 2,
    "prompt": "",
    "promptEnabled": true,
    "rationale": "",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "",
    "teacherInstructionsEnabled": true,
    "toolbarEditorPosition": "bottom",
  },
  "partLabelType": "Letters",
  "partLabels": true,
}
`;

exports[`index createDefaultModel with-overrides-snapshot 1`] = `
Object {
  "partA": Object {
    "choiceMode": "radio",
    "choicePrefix": "letters",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": false,
    "gridColumns": 2,
    "prompt": "",
    "promptEnabled": true,
    "rationale": "foo",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "ti",
    "teacherInstructionsEnabled": true,
    "toolbarEditorPosition": "bottom",
  },
  "partB": Object {
    "choiceMode": "radio",
    "choicePrefix": "letters",
    "choices": Array [],
    "choicesLayout": "vertical",
    "feedbackEnabled": false,
    "gridColumns": 2,
    "prompt": "",
    "promptEnabled": true,
    "rationale": "",
    "rationaleEnabled": true,
    "spellCheckEnabled": true,
    "studentInstructionsEnabled": true,
    "teacherInstructions": "",
    "teacherInstructionsEnabled": true,
    "toolbarEditorPosition": "bottom",
  },
  "partLabelType": "Letters",
  "partLabels": true,
}
`;
